Bug 198634: we need to implement PR_DetachThread on the platforms that don't have a way to detach the foreign threads automatically when they terminate (e.g., OS/2).  The patch is contributed by Michael Kaply <mkaply@us.ibm.com>.